2006-07-25  MenTaLguY  <mental@rydia.net>

	* src/widgets/gradient-vector.cpp, src/widgets/gradient-vector.h:

	  switch to sigc++ SPObject signals for SPGradientVectorSelector

2006-07-25  MenTaLguY  <mental@rydia.net>

	* autogen.sh, configure.ac, debian/control, tools-version.sh:

	  un-libtoolize the build process (yay!) -- we haven't actually
	  used libtool for ages

2006-07-25  MenTaLguY  <mental@rydia.net>

	* src/extension/plugin, src/extension/plugin/Makefile_insert,
	  src/extension/plugin/makefile.in, src/extension/plugin/.cvsignore,
	  src/Makefile.am, configure.ac:

	  remove vestigal plugin support

2006-07-24  MenTaLguY  <mental@rydia.net>

    * configure.ac: further work on LSB build configuration

2006-07-23  John Bintz  <jcoswell@coswellproductions.org>

  * src/verbs.cpp, src/event-context.cpp, src/node-context.cpp:

    forced redraw of canvas upon completion of zooming or upon
    starting rubber band selection events to work around event
    starvation issue at high zoom levels

2006-07-23  MenTaLguY  <mental@rydia.net>

  * src/widgets/paint-selector.cpp:

    Update pattern creation help text to reflect new menu layout.  We
    probably need some way to automatically generate
    "menu navigation strings" for a given verb.

2006-07-23  Michael Wybrow  <mjwybrow@users.sourceforge.net>

	* packaging/osx-app.sh, packaging/macosx/inkscape.ds_store
	  packaging/macosx/dmg_background.svg, packaging/macosx/osx-dmg.sh,
	  packaging/macosx/dmg_background.png, Makefile.am,
	  packaging/macosx/dmg_set_style.scpt:

	  Improve the disk image layout for Mac OS X releases.  This is 
	  based on Jean-Olivier Irisson's work and patches, submitted as
	  #1516212.

2006-07-23  John Bintz  <jcoswell@coswellproductions.org>

	* src/desktop.cpp, src/desktop.h:

	  added SPDesktop::updateNow()

	* src/event-context.cpp, src/select-context.cpp, src/node-context.cpp:

	  forced redraw of canvas upon completion of selection or panning